RESOLVED FIXED148424
Fix the !ENABLE(VIDEO) build after r188693
https://bugs.webkit.org/show_bug.cgi?id=148424
Summary Fix the !ENABLE(VIDEO) build after r188693
Csaba Osztrogonác
Reported 2015-08-25 02:48:49 PDT
http://trac.webkit.org/changeset/188693 broke the !ENABLE(VIDEO) build, because ChromeClient::imageOrMediaDocumentSizeChanged() is defined inside ENABLE(VIDEO) guard, but is overriden unconfitionally: ../../Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.h:328:18: error: 'virtual void WebKit::WebChromeClient::imageOrMediaDocumentSizeChanged(const WebCore::IntSize&)' marked override, but does not override
Attachments
Patch (1.38 KB, patch)
2015-08-25 02:52 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-08-25 02:52:19 PDT
WebKit Commit Bot
Comment 2 2015-08-25 11:13:20 PDT
Comment on attachment 259834 [details] Patch Clearing flags on attachment: 259834 Committed r188923: <http://trac.webkit.org/changeset/188923>
WebKit Commit Bot
Comment 3 2015-08-25 11:13:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.