Fix the !ENABLE(VIDEO) build after r188693 https://bugs.webkit.org/show_bug.cgi?id=148424

Reviewed by Tim Horton.

* page/ChromeClient.h:


Canonical link: https://commits.webkit.org/166542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188923 268f45cc-cd09-0410-ab3c-d52691b4dbfc